# Multimodal_Stochastic_Medical_Tutor

./: .gitattributes  README.md  pyproject.toml
assets/: demo.mov
outputs/run_20260109_122449/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164425/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164427/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164439/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164527/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164529/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164600/: retrieval_artifacts.jsonl  trace.jsonl
outputs/run_20260109_164603/: retrieval_artifacts.jsonl  trace.jsonl
playbooks/: phase1_tool_use.txt
tests/: conftest.py  test_ace_full_loop.py  test_ace_runner.py  test_action_controller_eval.py  test_action_controller_training.py  test_answer_prompt.py  test_answer_retry.py  test_answer_runtime.py  test_cli_ace_eval.py  test_cli_run.py  test_cli_tutor.py  test_config_paths.py  test_eval_runner.py  test_langsmith_integration.py  test_medxpert_downloader.py  test_medxpert_loader.py  test_socratic_dataset_builder.py  test_tool_call_normalization.py  test_tool_image_findings.py  test_tutor_gating.py  test_tutor_integration_tool_use.py  test_tutor_policy_parsing.py  test_tutor_prompt_context.py  test_tutor_routing.py  test_tutor_tool_limit.py  test_ui_formatting.py
training/: __init__.py  dataset.py  evaluate_tool_policy_tinker.py  rewards.py  rollout_eval.py  tinker_env.py  train_rl.py  train_tool_policy_tinker.py
(+67 files in other folders)
