[project]
name = "medical-tutor"
version = "0.1.0"
description = "Standalone Medical Tutor (LangGraph-based visual chat)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nayana Chandrika", email = "nayanachandrika99@gmail.com" }
]

dependencies = [
    "langgraph",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "transformers>=4.38.0",
    "peft>=0.8.0",
    "accelerate>=0.25.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "gradio>=4.0.0",
    "pillow>=10.0.0",
    "datasets>=2.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
medical-tutor = "medical_tutor.cli:main"
medical-tutor-ui = "medical_tutor.cli:main_ui"
medical-tutor-ace = "medical_tutor.cli:main_ace"
medical-tutor-eval = "medical_tutor.cli:main_eval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_tutor"]
